--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opencode-synced",
+  "name": "@ksw8954/opencode-synced",
   "version": "0.9.0",
   "description": "Sync global opencode config across machines via GitHub.",
   "author": {
