fix(ci): use scoped package name @ksw8954/opencode-synced in workflows

--- a/.github/workflows/opencode-smoke.yml
+++ b/.github/workflows/opencode-smoke.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Resolve plugin version
         id: version
         run: |
-          VERSION=$(npm view opencode-synced@${{ inputs.tag }} version)
+          VERSION=$(npm view @ksw8954/opencode-synced@${{ inputs.tag }} version)
           if [ -z "$VERSION" ]; then
             echo "No version found for tag: ${{ inputs.tag }}"
             exit 1
