--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,6 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    outputs:
-      requested_tag: ${{ steps.publish.outputs.requested_tag }}
-      version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
 
@@ -41,60 +38,12 @@ jobs:
       - id: inputs
         uses: simenandre/setup-inputs@v1
 
-      - name: Publish candidate to npm with OIDC
-        id: publish
+      - name: Publish to npm with OIDC
         run: |
           TAG="${{ steps.inputs.outputs.tag }}"
           if [ -z "$TAG" ]; then
             TAG="latest"
           fi
 
-          echo "requested_tag=$TAG" >> "$GITHUB_OUTPUT"
-
-          CANDIDATE_TAG="next"
-          echo "Publishing candidate with tag: $CANDIDATE_TAG (requested: $TAG)"
-          mise run publish --tag "$CANDIDATE_TAG"
-
-      - name: Resolve published version
-        id: version
-        run: |
-          VERSION=$(npm view @ksw8954/opencode-synced@next version)
-          if [ -z "$VERSION" ]; then
-            echo "Failed to resolve version from npm tag: next"
-            exit 1
-          fi
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-
-  smoke:
-    needs: publish
-    uses: ./.github/workflows/opencode-smoke.yml
-    with:
-      tag: next
-      timeout: 20
-
-  promote_latest:
-    needs: [publish, smoke]
-    if: always() && needs.publish.outputs.requested_tag == 'latest' && needs.publish.result == 'success'
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: jdx/mise-action@d6e32c1796099e0f1f3ac741c220a8b7eae9e5dd
-        with:
-          install: true
-          cache: true
-          experimental: true
-
-      - name: Promote latest dist-tag
-        run: |
-          VERSION="${{ needs.publish.outputs.version }}"
-          if [ -z "$VERSION" ]; then
-            echo "Missing published version."
-            exit 1
-          fi
-
-          echo "Promoting @ksw8954/opencode-synced@$VERSION to latest"
-          npm dist-tag add "@ksw8954/opencode-synced@$VERSION" latest
+          echo "Publishing with tag: $TAG"
+          mise run publish --tag "$TAG"
